2007-08-11  higepon  <higepon@users.sourceforge.jp>

        * core/scheme: Added quasiquote support.

2007-08-10  higepon  <higepon@users.sourceforge.jp>

        * Moved scheme-gc to mona/core/scheme.

2007-07-14  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/PageManager.cpp (PageManager::pageFaultHandler): Changed a stack over flow message.

        * core/scheme/test/pair.scm ("lambda's argument"): Added a test for lambda's arguments.

        * core/scheme/Procedure.cpp (Procedure::apply): Fixed a lambda's arguments bug.

        * core/scheme/lib/shell.scm.in (ls): ls takes a argument.

        * core/scheme/histories.cpp: Added for a input history.

        * core/scheme/install-mona.sh: Added for easy development.

2007-07-13  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/SRegexp.cpp (SRegexp::apply): Now we can apply regex to mona object.

2007-07-12  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/scheme.h (SCM_APPLY_PROC): Added for apply proc from string.

        * core/scheme/lib/core.scm.in: Add unless macro.

2007-07-09  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/SRegexp.cpp (SRegexp::apply): Fixed regexp test failure.

2007-07-08  higepon  <higepon@users.sourceforge.jp>

        * tool/qemu/start.sh: Added for QEMU.

        * README: Added for an explanation of executing Mona on QEMU.

        * core/monapi/Message.cpp (Message::replyError): Added.

        * core/monapi/syscall.cpp (mthread_create): Changed arg uint32_t f to void (*f)(void). 

2007-07-07  higepon  <higepon@users.sourceforge.jp>

        * share/configs/monapi.inc (INCLUDE): Added -I include/monalibc, -I include/stlport.

        * core/monapi/messages.cpp: Added ID_NET_SERVER.

        * include/monapi/syscall.h (MONAPI_WARN): Added MONAPI_WARN.

        * core/monapi/Message.cpp (Message::create): Use MESSAGE_INFO_MAX_STR_LENGTH.

        * include/sys/types.h : Added MESSAGE_INFO_MAX_STR_LENGTH.
